--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build-dev": "dotenv -e .env.development react-scripts build",
     "build-prod": "dotenv -e .env.production react-scripts build",
-    "build": "echo \"Please use build-dev or build-prod\"\n && exit 1",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
